--- a/albums/ashes-and-echoes/tracks/ash-and-echoes.html
+++ b/albums/ashes-and-echoes/tracks/ash-and-echoes.html
@@ -10,10 +10,8 @@
 {
   "@context": "https://schema.org",
   "@type": "MusicRecording",
-  "@id": "https://music.mycal.net/albums/ashes-and-echoes/tracks/we-did-start-the-fire",
-  "name": "We Did Start the Fire (Burning Man History Jam)",
-  "duration": "PT6M29S",
-  "inLanguage": "en",
+  "@id": "https://music.mycal.net/albums/ashes-and-echoes/tracks/ash-and-echoes",
+  "name": "Ash and Echoes (The Temple Song)",
   "byArtist": {
     "@type": "Person",
     "@id": "https://music.mycal.net/#mycal"
@@ -23,18 +21,25 @@
     "@id": "https://music.mycal.net/albums/ashes-and-echoes",
     "name": "Ashes and Echoes — Songs from the Playa"
   },
-  "genre": ["Folk", "Electronic", "Burning Man", "History Jam"],
-  "position": 1,
+  "duration": "PT3M43S",
+  "position": 10,
+  "genre": ["Folk", "Electronic", "Burning Man", "Temple Song"],
   "datePublished": "2025-08-15",
-  "image": "https://music.mycal.net/assets/img/tracks/start-a-fire-image.jpg",
-  "url": "https://music.mycal.net/albums/ashes-and-echoes/tracks/we-did-start-the-fire.html",
-  "description": ""We Did Start the Fire (Burning Man History Jam)" is a rhythmic ritual, a timeline-in-flames, and a campfire chant for the dust-born. Tracing Burning Man's evolution from a rope on Baker Beach to towering temples and art cars in the void, the song weaves names, myths, and moments into a lyrical memory loop — part oral history, part glitch-folk gospel, and a wink to the firestarter in all of us.",
+  "image": "https://music.mycal.net/assets/img/tracks/The-Temple-Song.jpg",
+  "url": "https://music.mycal.net/albums/ashes-and-echoes/tracks/ash-and-echoes.html",
+  "description": "\"Ash and Echoes (The Temple Song)\" is the quiet center of the album — a hymn for the Temple, where feathers, photos, names and dust all meet the fire. It follows the walk in, the burn, and the strange lightness that comes after we let go of what we could never quite say out loud.",
   "sameAs": [
-    "https://distrokid.com/hyperfollow/mycal/ashes-and-echoes-songs-from-the-playa-stories-from-fire-and-steel"
+    "https://distrokid.com/hyperfollow/mycal/ashes-and-echoes-songs-from-the-playa-stories-from-fire-and-steel",
+    "https://music.apple.com/us/song/ash-and-echoes-the-temple-song/1830902050",
+    "https://open.spotify.com/track/4oHacHdeNW4hDrkbVkqOtC",
+    "https://www.youtube.com/watch?v=Hd3gPFS0Cyw",
+    "https://www.pandora.com/artist/mycal/ashes-and-echoes-songs-from-the-playa-stories-from-fire-and-steel/ash-and-echoes-the-temple-song/TR7lp3t5472cfc4",
+    "https://music.amazon.com/albums/B0FL13GHC2?trackAsin=B0FL14N5X2",
+    "https://mycalmusic.bandcamp.com/track/ash-and-echoes-the-temple-song"
   ],
   "lyrics": {
     "@type": "CreativeWork",
-    "text": "\"Before the apps… before the wristbands…\nbefore the permits and the sparkle Ponies…\nthere was Baker Beach… a bonfire… a rope…\nand an idea passed between friends.\"\n(beat)\n\"That idea found dust… and space…\nand the Playa gave it room to grow.\"\n\nBaker Beach, Zone Trip Four Cacophony kicks the door,\nHarvey, James and TAZ, black suits, jazz and desert daze.\nDanger Ranger, Peter Pan, code 007 man,\nMarian's Seventy-Eight Olds, Larry's dream, the story unfolds. , (humming \"mmm-hmm\")\nChristmas Camp, Turbo Ted, Stagger Sisters, raver heads,\nGoa Gil, John Law's Doghead show,\n3-Day Stubble, let it go!\nPull the rope, raise the Man,\nNothing was yet pre-planned,\nTrash fence, lamps lit, Center Camp misfits\n\nWe did start the fire!\nLit it on the Playa, and it's getting higher!\nWe did start the fire!\nRangers on patrol now, never gonna tire.\n\nPapa Satan, Hellco crew, Techno Ghetto breaks right through,\nRegulations rolling in, John Law's departure begins.\nHualapai and Fly Ranch, LNT in every branch,\nRod Garrett draws the plan, theme camps sprawl across the land.\nPier to Pier, Temple Flux, Mantfarm, mutant art trucks,\nBliss Dance, Rites of Passage, Trojan Horse, DPW's wreckage.\nTV Free and Big Rig's roar,\nJiffy Lube and camel corps,\nSpace Whale, Light House, drones, drones, drones!\nAaron's hat and shattered bones.\n(Woooohhh)\n\nWe did start the fire!\nOn the open Playa, glowing in the wire.\nWe did start the fire!\nEven when it's gone, the myth keeps burning higher.\n\nRangers in the dust at dawn,\nCode Double Oh then he's gone.\nExploding Man in '98,\nEviction seals a dusty fate.\nMowers parked out in the void,\nAbsurdity we all enjoyed.\nSergey camps, BLM heat, DPW won't face defeat,\nArt cars, stilt stars, Aaron's clock and hexed guitars.\nWhite Ocean, Catacombs,\nBank of Un-America loans,\nChurch Trap's got no grace,\nTemple's fire lights your face.\nRobots walk, Nixon's law,\nHexatron draws the awe.\nTenner bikes, burner rites,\nWelcome home on desert nights.\nNo minivan, no glam parade,\nJust boot prints where the dream was made. (aaaaya)\nWe did start the fire!\nBurned it all to ashes, made a spire higher.\nWe did start the fire!\nNow we're dust and legends, riding out the wire.\n\"They say we leave no trace.\nBut look closer…\nThere's footprints under the dust.\nSignals in the static.\nAnd echoes from a campfire…\nthat burned before the map had names\n\"Mycal, You just had to be there.\"\n\nWe did start the fire!\nOn the open Playa, glowing in the wire.\nWe did start the fire!\nEven when it's gone, the myth keeps burning higher.\n\nRangers in the dust at dawn,\nCode 007 — then he's gone.\nExploding Man in '98,\nEviction seals a dusty fate.\nMowers parked out in the void,\nAbsurdity we all enjoyed.\nSergey camps, BLM heat, DPW won't face defeat,\nArt cars, stilt stars, Aaron's clock and hexed guitars.\nWhite Ocean, Catacombs,\nBank of Un-America loans,\nChurch Trap's got no grace,\nTemple's fire lights your face.\nRobots walk, Nixon's law,\nHexatron draws the awe.\nTenner bikes, burner rites,\nWelcome home on desert nights.\nNo minivan, no glam parade,\nJust boot prints where the dream was made. We did start the fire!\nBurned it all to ashes, made a spire higher.\nWe did start the fire!\nNow we're dust and legends, riding out the wire.\n\"They say we leave no trace.\nBut look closer…\nThere's footprints under the dust.\nSignals in the static.\nAnd echoes from a campfire…\nthat burned before the map had names"
+    "text": "(mmm-hmm...)\n\nDust on my boots, sun on my face\nCarrying names through this sacred space\nA thousand hearts stitched into wood\nBurning what words never could\n\nWind sings low where silence stays\nI trace the loss in lines and names\nEvery tear a story told\nIn the cracks of the Temple's soul\n(yeah…)\n\nSome came to grieve, some came to pray\nSome just needed to give it away\n(whoah...)\n\nAsh and echoes in the sky\nLet it rise, let it fly\nWhat we couldn't carry home\nWe leave in flame and leave alone\nNo judgment here, no need to speak\nThe Temple knows what we all seek\n\nAsh and echoes — let 'em rise\nAnd settle back into the Playa's sigh\n(ohhh… mmm-hmm)\n\nFeathers, photos, notes and dust\nBuilt with grief, and built with trust\nShe stands for those we've had to lose\nAnd everything we didn't choose\n\nWe walk in quiet, line by line\nEach soul a story left behind\nA hush beneath the stars so wide\nAs if the whole world paused to cry\n(whoah… yeah…)\n\nAsh and echoes in the sky\nLet it rise, let it fly\nWhat we couldn't carry home\nWe leave in flame and leave alone\n\nAsh and echoes — let 'em rise\nAnd settle back into the Playa's sigh\nAsh and echoes — burn and fly\nBecome the dust beneath the sky\n(mmm-hmm…)\n\nAnd when the fire takes her form\nWe are lighter than before\nShe falls in grace, and we are new\nAshes carried into truth\n\nNow she lives beneath our feet\nIn the dust where silence speaks"
   }
 }
   </script>
