Add Bandcamp embed for We Did Start the Fire

--- a/albums/ashes-and-echoes/index.html
+++ b/albums/ashes-and-echoes/index.html
@@ -638,7 +638,13 @@
     <section class="section" id="tracklist" aria-labelledby="tracks-heading">
       <h2 id="tracks-heading">Tracklist</h2>
       <ol class="tracklist">
-        <li class="track-item"><span>1.</span> <a href="/albums/ashes-and-echoes/tracks/we-did-start-the-fire.html">We Did Start the Fire (Burning Man History Jam)</a></li>
+        <li class="track-item">
+          <span>1.</span>
+          <a href="/albums/ashes-and-echoes/tracks/we-did-start-the-fire.html">We Did Start the Fire (Burning Man History Jam)</a>
+          <div class="track-embed">
+            <iframe style="border: 0; width: 100%; height: 42px;" src="https://bandcamp.com/EmbeddedPlayer/album=3359920229/size=small/bgcol=ffffff/linkcol=0687f5/track=416474459/transparent=true/" seamless><a href="https://mycalmusic.bandcamp.com/album/ashes-and-echoes-mycals-songs-from-the-playa-stories-from-fire-and-steel">Ashes and Echoes - Mycal&#39;s Songs from the Playa, Stories from Fire and Steel by mycal</a></iframe>
+          </div>
+        </li>
         <li class="track-item"><span>2.</span> <a href="/albums/ashes-and-echoes/tracks/i-was-meant-to-burn.html">I Was Meant to Burn</a></li>
         <li class="track-item"><span>3.</span> <a href="/albums/ashes-and-echoes/tracks/burner-girl.html">Burner Girl</a></li>
         <li class="track-item"><span>4.</span> <a href="/albums/ashes-and-echoes/tracks/ten-principles-one-heart.html">Ten Principles, One Heart</a></li>
