--- a/albums/ashes-and-echoes/index.html
+++ b/albums/ashes-and-echoes/index.html
@@ -642,7 +642,7 @@
           <span>1.</span>
           <a href="/albums/ashes-and-echoes/tracks/we-did-start-the-fire.html">We Did Start the Fire (Burning Man History Jam)</a>
           <div class="track-embed">
-            <iframe style="border: 0; width: 100%; height: 42px;" src="https://bandcamp.com/EmbeddedPlayer/album=3359920229/size=small/bgcol=ffffff/linkcol=0687f5/track=416474459/transparent=true/" seamless><a href="https://mycalmusic.bandcamp.com/album/ashes-and-echoes-mycals-songs-from-the-playa-stories-from-fire-and-steel">Ashes and Echoes - Mycal&#39;s Songs from the Playa, Stories from Fire and Steel by mycal</a></iframe>
+            <iframe style="border: 0; height: 42px;" src="https://bandcamp.com/EmbeddedPlayer/album=3359920229/size=small/bgcol=0c0906/linkcol=f6a441/track=416474459/transparent=true/" seamless><a href="https://mycalmusic.bandcamp.com/album/ashes-and-echoes-mycals-songs-from-the-playa-stories-from-fire-and-steel">Ashes and Echoes - Mycal&#39;s Songs from the Playa, Stories from Fire and Steel by mycal</a></iframe>
           </div>
         </li>
         <li class="track-item"><span>2.</span> <a href="/albums/ashes-and-echoes/tracks/i-was-meant-to-burn.html">I Was Meant to Burn</a></li>
