--- a/albums/ashes-and-echoes/tracks/we-did-start-the-fire.html
+++ b/albums/ashes-and-echoes/tracks/we-did-start-the-fire.html
@@ -75,7 +75,7 @@
           <a class="button" href="/albums/ashes-and-echoes/">Back to album</a>
         </div>
         <div class="track-embed">
-          <iframe style="border: 0; height: 42px;" src="https://bandcamp.com/EmbeddedPlayer/album=3359920229/size=small/bgcol=0c0906/linkcol=f6a441/track=416474459/transparent=true/" seamless><a href="https://mycalmusic.bandcamp.com/album/ashes-and-echoes-mycals-songs-from-the-playa-stories-from-fire-and-steel">Ashes and Echoes - Mycal&#39;s Songs from the Playa, Stories from Fire and Steel by mycal</a></iframe>
+          <iframe style="border: 0; width: 100%; height: 120px;" src="https://bandcamp.com/EmbeddedPlayer/album=3359920229/size=large/bgcol=0c0906/linkcol=0f91ff/tracklist=false/artwork=small/track=416474459/transparent=true/" seamless><a href="https://mycalmusic.bandcamp.com/album/ashes-and-echoes-mycals-songs-from-the-playa-stories-from-fire-and-steel">Ashes and Echoes - Mycal&#39;s Songs from the Playa, Stories from Fire and Steel by mycal</a></iframe>
         </div>
       </div>
     </section>
