--- a/albums/ashes-and-echoes/index.html
+++ b/albums/ashes-and-echoes/index.html
@@ -645,7 +645,13 @@
             <iframe style="border: 0; height: 42px;" src="https://bandcamp.com/EmbeddedPlayer/album=3359920229/size=small/bgcol=0c0906/linkcol=f6a441/track=416474459/transparent=true/" seamless><a href="https://mycalmusic.bandcamp.com/album/ashes-and-echoes-mycals-songs-from-the-playa-stories-from-fire-and-steel">Ashes and Echoes - Mycal&#39;s Songs from the Playa, Stories from Fire and Steel by mycal</a></iframe>
           </div>
         </li>
-        <li class="track-item"><span>2.</span> <a href="/albums/ashes-and-echoes/tracks/i-was-meant-to-burn.html">I Was Meant to Burn</a></li>
+        <li class="track-item">
+          <span>2.</span>
+          <a href="/albums/ashes-and-echoes/tracks/i-was-meant-to-burn.html">I Was Meant to Burn</a>
+          <div class="track-embed">
+            <iframe style="border: 0; height: 42px;" src="https://bandcamp.com/EmbeddedPlayer/album=3359920229/size=small/bgcol=0c0906/linkcol=f6a441/track=296007254/transparent=true/" seamless><a href="https://mycalmusic.bandcamp.com/album/ashes-and-echoes-mycals-songs-from-the-playa-stories-from-fire-and-steel">Ashes and Echoes - Mycal&#39;s Songs from the Playa, Stories from Fire and Steel by mycal</a></iframe>
+          </div>
+        </li>
         <li class="track-item"><span>3.</span> <a href="/albums/ashes-and-echoes/tracks/burner-girl.html">Burner Girl</a></li>
         <li class="track-item"><span>4.</span> <a href="/albums/ashes-and-echoes/tracks/ten-principles-one-heart.html">Ten Principles, One Heart</a></li>
         <li class="track-item"><span>5.</span> <a href="/albums/ashes-and-echoes/tracks/speak-burner-to-me.html">Speak Burner to Me</a></li>
