Add Bandcamp embeds for additional Ashes and Echoes tracks

--- a/albums/ashes-and-echoes/tracks/ten-principles-one-heart.html
+++ b/albums/ashes-and-echoes/tracks/ten-principles-one-heart.html
@@ -76,6 +76,9 @@
           <a class="button" href="https://distrokid.com/hyperfollow/mycal/ashes-and-echoes-songs-from-the-playa-stories-from-fire-and-steel" target="_blank" rel="noopener">Stream</a>
           <a class="button" href="/albums/ashes-and-echoes/">Back to album</a>
         </div>
+        <div class="track-embed">
+          <iframe style="border: 0; width: 100%; height: 120px;" src="https://bandcamp.com/EmbeddedPlayer/album=3359920229/size=large/bgcol=0c0906/linkcol=f6a441/tracklist=false/artwork=small/track=928998176/" seamless><a href="https://mycalmusic.bandcamp.com/album/ashes-and-echoes-mycals-songs-from-the-playa-stories-from-fire-and-steel">Ashes and Echoes - Mycal&#39;s Songs from the Playa, Stories from Fire and Steel by mycal</a></iframe>
+        </div>
       </div>
     </section>
 
