--- a/albums/ashes-and-echoes/index.html
+++ b/albums/ashes-and-echoes/index.html
@@ -652,11 +652,41 @@
             <iframe style="border: 0; height: 42px;" src="https://bandcamp.com/EmbeddedPlayer/album=3359920229/size=small/bgcol=0c0906/linkcol=f6a441/track=296007254/transparent=true/" seamless><a href="https://mycalmusic.bandcamp.com/album/ashes-and-echoes-mycals-songs-from-the-playa-stories-from-fire-and-steel">Ashes and Echoes - Mycal&#39;s Songs from the Playa, Stories from Fire and Steel by mycal</a></iframe>
           </div>
         </li>
-        <li class="track-item"><span>3.</span> <a href="/albums/ashes-and-echoes/tracks/burner-girl.html">Burner Girl</a></li>
-        <li class="track-item"><span>4.</span> <a href="/albums/ashes-and-echoes/tracks/ten-principles-one-heart.html">Ten Principles, One Heart</a></li>
-        <li class="track-item"><span>5.</span> <a href="/albums/ashes-and-echoes/tracks/speak-burner-to-me.html">Speak Burner to Me</a></li>
-        <li class="track-item"><span>6.</span> <a href="/albums/ashes-and-echoes/tracks/weird-steel.html">Weird Steel</a></li>
-        <li class="track-item"><span>7.</span> <a href="/albums/ashes-and-echoes/tracks/dust-to-dust.html">Dust to Dust (The Playa Sucks)</a></li>
+        <li class="track-item">
+          <span>3.</span>
+          <a href="/albums/ashes-and-echoes/tracks/burner-girl.html">Burner Girl</a>
+          <div class="track-embed">
+            <iframe style="border: 0; height: 42px;" src="https://bandcamp.com/EmbeddedPlayer/album=3359920229/size=small/bgcol=0c0906/linkcol=f6a441/track=3197213755/transparent=true/" seamless><a href="https://mycalmusic.bandcamp.com/album/ashes-and-echoes-mycals-songs-from-the-playa-stories-from-fire-and-steel">Ashes and Echoes - Mycal&#39;s Songs from the Playa, Stories from Fire and Steel by mycal</a></iframe>
+          </div>
+        </li>
+        <li class="track-item">
+          <span>4.</span>
+          <a href="/albums/ashes-and-echoes/tracks/ten-principles-one-heart.html">Ten Principles, One Heart</a>
+          <div class="track-embed">
+            <iframe style="border: 0; height: 42px;" src="https://bandcamp.com/EmbeddedPlayer/album=3359920229/size=small/bgcol=0c0906/linkcol=f6a441/track=928998176/transparent=true/" seamless><a href="https://mycalmusic.bandcamp.com/album/ashes-and-echoes-mycals-songs-from-the-playa-stories-from-fire-and-steel">Ashes and Echoes - Mycal&#39;s Songs from the Playa, Stories from Fire and Steel by mycal</a></iframe>
+          </div>
+        </li>
+        <li class="track-item">
+          <span>5.</span>
+          <a href="/albums/ashes-and-echoes/tracks/speak-burner-to-me.html">Speak Burner to Me</a>
+          <div class="track-embed">
+            <iframe style="border: 0; height: 42px;" src="https://bandcamp.com/EmbeddedPlayer/album=3359920229/size=small/bgcol=0c0906/linkcol=f6a441/track=3144384143/transparent=true/" seamless><a href="https://mycalmusic.bandcamp.com/album/ashes-and-echoes-mycals-songs-from-the-playa-stories-from-fire-and-steel">Ashes and Echoes - Mycal&#39;s Songs from the Playa, Stories from Fire and Steel by mycal</a></iframe>
+          </div>
+        </li>
+        <li class="track-item">
+          <span>6.</span>
+          <a href="/albums/ashes-and-echoes/tracks/weird-steel.html">Weird Steel</a>
+          <div class="track-embed">
+            <iframe style="border: 0; height: 42px;" src="https://bandcamp.com/EmbeddedPlayer/album=3359920229/size=small/bgcol=0c0906/linkcol=f6a441/track=2255024535/transparent=true/" seamless><a href="https://mycalmusic.bandcamp.com/album/ashes-and-echoes-mycals-songs-from-the-playa-stories-from-fire-and-steel">Ashes and Echoes - Mycal&#39;s Songs from the Playa, Stories from Fire and Steel by mycal</a></iframe>
+          </div>
+        </li>
+        <li class="track-item">
+          <span>7.</span>
+          <a href="/albums/ashes-and-echoes/tracks/dust-to-dust.html">Dust to Dust (The Playa Sucks)</a>
+          <div class="track-embed">
+            <iframe style="border: 0; height: 42px;" src="https://bandcamp.com/EmbeddedPlayer/album=3359920229/size=small/bgcol=0c0906/linkcol=f6a441/track=2748428151/transparent=true/" seamless><a href="https://mycalmusic.bandcamp.com/album/ashes-and-echoes-mycals-songs-from-the-playa-stories-from-fire-and-steel">Ashes and Echoes - Mycal&#39;s Songs from the Playa, Stories from Fire and Steel by mycal</a></iframe>
+          </div>
+        </li>
         <li class="track-item"><span>8.</span> <a href="/albums/ashes-and-echoes/tracks/sparkle-pony.html">Sparkle Pony</a></li>
         <li class="track-item"><span>9.</span> <a href="/albums/ashes-and-echoes/tracks/buck-bandersnatch-song.html">The Buck Bandersnatch Song (Playa Dreams)</a></li>
         <li class="track-item"><span>10.</span> <a href="/albums/ashes-and-echoes/tracks/ash-and-echoes.html">Ash and Echoes (The Temple Song)</a></li>
