Add bandcamp embeds for remaining tracks

--- a/albums/ashes-and-echoes/index.html
+++ b/albums/ashes-and-echoes/index.html
@@ -687,13 +687,55 @@
             <iframe style="border: 0; height: 42px;" src="https://bandcamp.com/EmbeddedPlayer/album=3359920229/size=small/bgcol=0c0906/linkcol=f6a441/track=2748428151/transparent=true/" seamless><a href="https://mycalmusic.bandcamp.com/album/ashes-and-echoes-mycals-songs-from-the-playa-stories-from-fire-and-steel">Ashes and Echoes - Mycal&#39;s Songs from the Playa, Stories from Fire and Steel by mycal</a></iframe>
           </div>
         </li>
-        <li class="track-item"><span>8.</span> <a href="/albums/ashes-and-echoes/tracks/sparkle-pony.html">Sparkle Pony</a></li>
-        <li class="track-item"><span>9.</span> <a href="/albums/ashes-and-echoes/tracks/buck-bandersnatch-song.html">The Buck Bandersnatch Song (Playa Dreams)</a></li>
-        <li class="track-item"><span>10.</span> <a href="/albums/ashes-and-echoes/tracks/ash-and-echoes.html">Ash and Echoes (The Temple Song)</a></li>
-        <li class="track-item"><span>11.</span> <a href="/albums/ashes-and-echoes/tracks/overheard-at-burning-man.html">Overheard at Burning Man</a></li>
-        <li class="track-item"><span>12.</span> <a href="/albums/ashes-and-echoes/tracks/fighting-wasnt-working.html">Fighting Wasn't Working</a></li>
-        <li class="track-item"><span>13.</span> <a href="/albums/ashes-and-echoes/tracks/no-authority-night-crew.html">No Authority Night Crew</a></li>
-        <li class="track-item"><span>14.</span> <a href="/albums/ashes-and-echoes/tracks/petaluma-chicken-scratch.html">Petaluma Chicken Scratch</a></li>
+        <li class="track-item">
+          <span>8.</span>
+          <a href="/albums/ashes-and-echoes/tracks/sparkle-pony.html">Sparkle Pony</a>
+          <div class="track-embed">
+            <iframe style="border: 0; height: 42px;" src="https://bandcamp.com/EmbeddedPlayer/album=3359920229/size=small/bgcol=0c0906/linkcol=f6a441/track=1300340550/transparent=true/" seamless><a href="https://mycalmusic.bandcamp.com/album/ashes-and-echoes-mycals-songs-from-the-playa-stories-from-fire-and-steel">Ashes and Echoes - Mycal&#39;s Songs from the Playa, Stories from Fire and Steel by mycal</a></iframe>
+          </div>
+        </li>
+        <li class="track-item">
+          <span>9.</span>
+          <a href="/albums/ashes-and-echoes/tracks/buck-bandersnatch-song.html">The Buck Bandersnatch Song (Playa Dreams)</a>
+          <div class="track-embed">
+            <iframe style="border: 0; height: 42px;" src="https://bandcamp.com/EmbeddedPlayer/album=3359920229/size=small/bgcol=0c0906/linkcol=f6a441/track=1562375624/transparent=true/" seamless><a href="https://mycalmusic.bandcamp.com/album/ashes-and-echoes-mycals-songs-from-the-playa-stories-from-fire-and-steel">Ashes and Echoes - Mycal&#39;s Songs from the Playa, Stories from Fire and Steel by mycal</a></iframe>
+          </div>
+        </li>
+        <li class="track-item">
+          <span>10.</span>
+          <a href="/albums/ashes-and-echoes/tracks/ash-and-echoes.html">Ash and Echoes (The Temple Song)</a>
+          <div class="track-embed">
+            <iframe style="border: 0; height: 42px;" src="https://bandcamp.com/EmbeddedPlayer/album=3359920229/size=small/bgcol=0c0906/linkcol=f6a441/track=1009265777/transparent=true/" seamless><a href="https://mycalmusic.bandcamp.com/album/ashes-and-echoes-mycals-songs-from-the-playa-stories-from-fire-and-steel">Ashes and Echoes - Mycal&#39;s Songs from the Playa, Stories from Fire and Steel by mycal</a></iframe>
+          </div>
+        </li>
+        <li class="track-item">
+          <span>11.</span>
+          <a href="/albums/ashes-and-echoes/tracks/overheard-at-burning-man.html">Overheard at Burning Man</a>
+          <div class="track-embed">
+            <iframe style="border: 0; height: 42px;" src="https://bandcamp.com/EmbeddedPlayer/album=3359920229/size=small/bgcol=0c0906/linkcol=f6a441/track=2114621308/transparent=true/" seamless><a href="https://mycalmusic.bandcamp.com/album/ashes-and-echoes-mycals-songs-from-the-playa-stories-from-fire-and-steel">Ashes and Echoes - Mycal&#39;s Songs from the Playa, Stories from Fire and Steel by mycal</a></iframe>
+          </div>
+        </li>
+        <li class="track-item">
+          <span>12.</span>
+          <a href="/albums/ashes-and-echoes/tracks/fighting-wasnt-working.html">Fighting Wasn't Working</a>
+          <div class="track-embed">
+            <iframe style="border: 0; height: 42px;" src="https://bandcamp.com/EmbeddedPlayer/album=3359920229/size=small/bgcol=0c0906/linkcol=f6a441/track=178738634/transparent=true/" seamless><a href="https://mycalmusic.bandcamp.com/album/ashes-and-echoes-mycals-songs-from-the-playa-stories-from-fire-and-steel">Ashes and Echoes - Mycal&#39;s Songs from the Playa, Stories from Fire and Steel by mycal</a></iframe>
+          </div>
+        </li>
+        <li class="track-item">
+          <span>13.</span>
+          <a href="/albums/ashes-and-echoes/tracks/no-authority-night-crew.html">No Authority Night Crew</a>
+          <div class="track-embed">
+            <iframe style="border: 0; height: 42px;" src="https://bandcamp.com/EmbeddedPlayer/album=3359920229/size=small/bgcol=0c0906/linkcol=f6a441/track=4218787746/transparent=true/" seamless><a href="https://mycalmusic.bandcamp.com/album/ashes-and-echoes-mycals-songs-from-the-playa-stories-from-fire-and-steel">Ashes and Echoes - Mycal&#39;s Songs from the Playa, Stories from Fire and Steel by mycal</a></iframe>
+          </div>
+        </li>
+        <li class="track-item">
+          <span>14.</span>
+          <a href="/albums/ashes-and-echoes/tracks/petaluma-chicken-scratch.html">Petaluma Chicken Scratch</a>
+          <div class="track-embed">
+            <iframe style="border: 0; height: 42px;" src="https://bandcamp.com/EmbeddedPlayer/album=3359920229/size=small/bgcol=0c0906/linkcol=f6a441/track=2599138715/transparent=true/" seamless><a href="https://mycalmusic.bandcamp.com/album/ashes-and-echoes-mycals-songs-from-the-playa-stories-from-fire-and-steel">Ashes and Echoes - Mycal&#39;s Songs from the Playa, Stories from Fire and Steel by mycal</a></iframe>
+          </div>
+        </li>
       </ol>
     </section>
   </main>
