--- a/albums/ashes-and-echoes/tracks/i-was-meant-to-burn.html
+++ b/albums/ashes-and-echoes/tracks/i-was-meant-to-burn.html
@@ -12,6 +12,8 @@
   <link rel="manifest" href="/site.webmanifest">
   <link rel="stylesheet" href="/assets/css/style.css">
 
+  <script defer src="https://analytics.mycal.net/script.js" data-website-id="875131dd-45c8-4045-a25e-d7e326dbf431"></script>
+
  <!-- Person/Artist Entity - CANONICAL VERSION (identical across all pages) -->
 <script type="application/ld+json">
 {
@@ -617,6 +619,8 @@ burn it all down
       </div>
     </div>
   </footer>
+
+  <script defer src="/assets/js/analytics-events.js"></script>
 
 
 </body>
