--- a/albums/ashes-and-echoes/tracks/we-did-start-the-fire.html
+++ b/albums/ashes-and-echoes/tracks/we-did-start-the-fire.html
@@ -11,7 +11,10 @@
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
   <link rel="manifest" href="/site.webmanifest">
   <link rel="stylesheet" href="/assets/css/style.css">
-  
+
+  <script defer src="https://analytics.mycal.net/script.js" data-website-id="875131dd-45c8-4045-a25e-d7e326dbf431"></script>
+ 
+
   <!-- Person/Artist Entity - CANONICAL VERSION (identical across all pages) -->
 <script type="application/ld+json">
 {
@@ -582,6 +585,8 @@ that burned before the map had names
       </div>
     </div>
   </footer>
+
+<script defer src="/assets/js/analytics-events.js"></script>
 
 
 </body>
