add local tracker

--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
   <link rel="manifest" href="/site.webmanifest">
   <link rel="stylesheet" href="/assets/css/style.css">
 
+  <script defer src="https://analytics.mycal.net/script.js" data-website-id="875131dd-45c8-4045-a25e-d7e326dbf431"></script>
+
+
+
 <!-- WebSite Entity -->
 <script type="application/ld+json">
 {
@@ -797,5 +801,10 @@
       </div>
     </div>
   </footer>
+
+
+<script defer src="/assets/js/analytics-events.js"></script>
+
+
 </body>
 </html>
